Bug 157263 - DOCX of 3 pages opens 4 pages for split table
Summary: DOCX of 3 pages opens 4 pages for split table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2023-09-15 14:53 UTC by Timur
Modified: 2024-05-14 10:11 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2023-09-15 14:53:36 UTC
3 pages DOCX attachment 71442 [details] used to be 4 pages but fixed in bug 136768 with  source c31267e23603c77e3a3335fa431bb9b74448d5b2 for LO 7.6.

In 24,2 it regressed back to 4 pages with 
commit a4af5432753408c4eea8a8d56c2f48202160c5fe	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Mon Jul 17 09:00:33 2023 
tdf#120262 sw floattable, legacy: fix text wrap around fly when no content fits
Comment 1 Telesto 2023-09-15 20:03:56 UTC
Confirm
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: be9d7bee88eff89c0d361f23abb447ac2086c3b4
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 2 Miklos Vajna 2023-09-20 10:20:21 UTC
Strictly speaking my above commit did the correct change, the "SPØRSMÅL FOR ALLE TYPER EIENDOMMER" table used to be at the bottom of page 1 and now it's at the top  of page 2, matching Word.

What looks odd is that now the 2nd row of that table goes to a next page, and that problem was not visible before.

But sure, I see that if you just use the page count as a metric, then this is on me. ;-)
Comment 3 Miklos Vajna 2023-09-21 07:50:39 UTC
Right, a cut-down version with no floating tables has the same problem that the 2nd page has a table's first row and everything else goes to an unexpected 3rd page. This is already a problem with 'linux-43all.git oldest'.

I'll look at this.
Comment 4 Commit Notification 2023-09-25 07:42:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8521d969ab5be4fc947e467d4afe969f9d3b563

tdf#157263 sw floattable: prefer join over split after moving fwd

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-27 10:41:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1d71e51db56e9f8692dda1d66b0d2d661e0f7711

tdf#157263 sw floattable: prefer join over split after moving fwd

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.