tdf#157263 sw floattable: prefer join over split after moving fwd

Regression from commit a4af5432753408c4eea8a8d56c2f48202160c5fe
(tdf#120262 sw floattable, legacy: fix text wrap around fly when no
content fits, 2023-07-17), the bugdoc was of 3 pages in both Word and
Writer, but is now of 4 pages in Writer.

The above commit fixed the layout, so the first row of the table around
the page 1 -> page 2 boundary goes to the start of page 2 instead of to
the end of page 1. This matches the Word layout, so a wanted change on
its own, but it regressed the page acount. The reason for this is that
the table has a single row on page 2 and its follow on page 3 is not
joined, even if there would be still space on page 2. A reduced bugdoc
appears to reproduce this problem even without floating tables, also
with old versions, so it's not a new problem, but it's now more visible.

Fix the problem by tweaking what to do in the next iteration in the loop
of SwTabFrame::MakeAll() after moving forward. Moving forward is
followed by a next iteration in that function, but it does both a
MakePos() and a Format(), so it'll be the last iteration in the "is the
postion / size of this tab frame valid" loop. We used to hit the "bSplit
== true" case, there we found that there is enough remaining space, so
no need to split and we quit the loop. This is now changed, so in case
we moved the table forward and there is still enough space for the
follow to be next to us, then the last iteration will try to join
instead of trying to split.

Note that probably split almost never makes sense after moving forward
in the !HasNext() && HasFollow() case, but let's stay on the safe side
and only do this when the follow definitely fits, which is enough for
our needs here.

(cherry picked from commit b8521d969ab5be4fc947e467d4afe969f9d3b563)

Conflicts:
	sw/qa/core/layout/tabfrm.cxx

Change-Id: I64b0a7d257b0ab01353741506969a287b361c5ff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157266
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>